# tanuk-script

./: CMakeLists.txt  build.py  push.py  test.txt
.cache/clangd/index/: common.cc.38E3FE66D6E58DFE.idx  common.hh.A2CEDE9F31CC1B05.idx  decoder.cc.421E4212147229B4.idx  decoder.hh.360CBE22DAE7A6A8.idx  define.hh.E8B87E21ED3089E1.idx  ekind.hh.25CE76C18AD03D80.idx  exception.hh.BA621FEC0EA549BA.idx  lexer.cc.0147FE2583B07EC2.idx  lexer.hh.FE0BA515D1710337.idx  logger.cc.D4E48B1D6434B014.idx  logger.hh.D5B9BBFC63BC47A2.idx  main.cc.78385387873318F8.idx  parser.cc.A1A30EB8175CFD8D.idx  parser.hh.F408E078E2AA0DF4.idx  semantic_analyzer.cc.EDD3715A0806D88C.idx  singleton.hh.49E621E08A93B695.idx  struct.hh.15F4CA49649A7C0F.idx  symbol_mgr.cc.28F9B0A347806947.idx  symbol_mgr.hh.8D6F452EF0FA1B8B.idx
src/: alias.hh  common.cc  common.hh  decoder.cc  decoder.hh  ekind.hh  exception.hh  lexer.cc  lexer.hh  logger.cc  logger.hh  main.cc  parser.cc  parser.hh  singleton.hh  struct.hh  symbol_mgr.cc  symbol_mgr.hh
